# Last-To-leave-vc-bot

./: .env.example  .gitignore  Pipfile  bot.py  constants.py  main.py  pyproject.toml
utils/: convert.py  wizard_embed.py
